--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web
     codegen:
-        defaultPackage: myapp
+        defaultPackage: org.grails.myapp
     gorm:
         reactor:
             # Whether to translate GORM events into Reactor events
